Non-unified build fixes, early summer 2020 edition https://bugs.webkit.org/show_bug.cgi?id=212819

Unreviewed build fix.

Source/WebCore:

No new tests needed.


* animation/ElementAnimationRareData.cpp: Add missing RenderStyle.h header.
* animation/ElementAnimationRareData.h: Add forward declaration for RenderStyle.
* editing/TextManipulationController.cpp: Sprinkle missing HTMLNames:: prefixes.
(WebCore::shouldExtractValueForTextManipulation):
(WebCore::TextManipulationController::observeParagraphs):
(WebCore::makePositionTuple):
(WebCore::TextManipulationController::replace):
* platform/graphics/SimpleColor.h: Add missing ColorComponents.h and wtf/text/WTFString.h
headers.
* workers/service/context/ServiceWorkerThread.cpp: Add missing Logging.h header.

Source/WebKit:


* Shared/gtk/NativeWebMouseEventGtk.cpp:
(WebKit::NativeWebMouseEvent::NativeWebMouseEvent): Add missing WebCore:: namespace to
a couple of uses of WebCore::FloatSize.
* WebProcess/Storage/WebServiceWorkerFetchTaskClient.cpp: Add missing Logging.h header.


Canonical link: https://commits.webkit.org/225627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262621 268f45cc-cd09-0410-ab3c-d52691b4dbfc